[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data-cleaning-openenv"
version = "1.0.0"
description = "OpenEnv environment for real-world data cleaning tasks"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi==0.111.0",
  "uvicorn[standard]==0.29.0",
  "pydantic==2.7.1",
  "openai>=1.30.0",
  "requests>=2.31.0",
  "pyyaml>=6.0",
]

